Reviewed methodology and challenges sections

--- a/paper/bib/bitcoin.bib
+++ b/paper/bib/bitcoin.bib
@@ -46,13 +46,14 @@
 	bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@misc{BlockchainInfoPools,
-	Author = {Blockchain.info},
-	Date-Added = {2018-04-02 17:05:07 +0000},
-	Date-Modified = {2018-04-02 17:06:14 +0000},
-	Lastchecked = {04/02/2018},
-	Title = {Blockchain Hashrate Distribution Chart},
-	Url = {https://blockchain.info/pools}}
+@Misc{BlockchainInfoSize,
+  author        = {Blockchain.info},
+  title         = {Average Block Size},
+  url           = {https://www.blockchain.com/charts/avg-block-size},
+  date-added    = {2018-04-02 17:05:07 +0000},
+  date-modified = {2018-04-02 17:06:14 +0000},
+  lastchecked   = {04/02/2018},
+}
 
 @misc{Digiconomist,
 	Author = {Digiconomist.net},
@@ -75,14 +76,20 @@
 	Date-Added = {2018-04-02 16:01:32 +0000},
 	Date-Modified = {2018-04-02 16:05:00 +0000},
 	Title = {Bitcoin: A Peer-to-Peer Electronic Cash System; Sec. 8}}
-
-@misc{BlockchainInfoSize,
+{@misc{BlockchainInfoPools,
 	Author = {Blockchain.info},
-	Date-Added = {2018-04-02 15:47:59 +0000},
-	Date-Modified = {2018-04-02 17:05:03 +0000},
+	Date-Added = {2018-04-02 17:05:07 +0000},
+	Date-Modified = {2018-04-02 17:06:14 +0000},
 	Lastchecked = {04/02/2018},
-	Title = {Blockchain Size Chart},
-	Url = {https://blockchain.info/charts/blocks-size}}
+	Title = {Blockchain Hashrate Distribution Chart},
+	Url = {https://blockchain.info/pools}},
+  author        = {Blockchain.info},
+  title         = {Blockchain Size Chart},
+  url           = {https://blockchain.info/charts/blocks-size},
+  date-added    = {2018-04-02 15:47:59 +0000},
+  date-modified = {2018-04-02 17:05:03 +0000},
+  lastchecked   = {04/02/2018},
+}
 
 @inproceedings{Androulaki13,
 	Author = {Androulaki, Elli and Karame, Ghassan O. and Roeschlin, Marc and Scherer, Tobias and Capkun, Srdjan},
@@ -1136,6 +1143,30 @@ Scalable off-chain instant payments},
   year         = {2016},
   organization = {Springer},
   pages        = {106--125},
+}
+
+@Misc{BlockchainInfoPools,
+  author        = {Blockchain.info},
+  title         = {Blockchain Hashrate Distribution Chart},
+  url           = {https://www.blockchain.info/pools},
+  date-added    = {2018-04-02 17:05:07 +0000},
+  date-modified = {2018-04-02 17:06:14 +0000},
+  lastchecked   = {04/02/2018},
+}
+
+@Article{IOTA,
+  author = {Popov, Serguei},
+  title  = {The tangle},
+  year   = {2018},
+}
+
+@Misc{BlockchainInfoTransactionConfTime,
+  author        = {Blockchain.info},
+  title         = {Average Confirmation Time},
+  url           = {https://www.blockchain.com/charts/avg-confirmation-time},
+  date-added    = {2018-04-02 17:05:07 +0000},
+  date-modified = {2018-04-02 17:06:14 +0000},
+  lastchecked   = {04/02/2018},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
