--- a/paper/sections/challenges.tex
+++ b/paper/sections/challenges.tex
@@ -12,24 +12,24 @@ Our analysis has allowed us to identify several challenge areas for the developm
 
 %\paragraph{Scalability of public blockchains: transaction costs and bandwidth, emergent centralization, and energy consumption}
 \subsection{Blockchain scalability}
-As blockchain-based systems such as Bitcoin have grown, the increased number of transactions and user base have raised questions about the scalability of such blockchain-based systems.  In particular, today's systems often waste large amounts of energy, have slow transactions with high transaction fees, and have trouble supporting the increased volume of transactions due to more and more services being deployed on blockchain.
+As blockchain-based systems such as Bitcoin have grown, the increased number of transactions and users have raised questions about the scalability of such systems.  In particular, today's systems often waste large amounts of energy, have slow transactions with high transaction fees, and have trouble supporting high transaction volume.
 
 \paragraph{Power consumption and centralization of mining}
-Most of today's permissionless blockchains are based on proof-of-work style consensus in which consensus is achieved by having miners solve computationally difficult puzzles to extend the blockchain.  This has led to the proliferation of specialized hardware devices dedicated to solving these computational puzzles.  However, such devices consume tremendous amounts of power in order to maintain these blockchains.  For example, according to one estimate\cite{Digiconomist}, as of April 2018 the energy consumed by Bitcoin miners is equivalent to the power usage of almost 5.5 million US households, and all signs indicate that it will continue to grow.
+Most of today's permissionless blockchains are based on proof-of-work style consensus in which consensus is achieved by having miners solve computationally difficult puzzles to extend the blockchain.  This has led to the proliferation of specialized hardware devices dedicated to solving these computational puzzles.  However, such devices consume tremendous amounts of power in order to maintain these blockchains.  For example, according to one estimate\cite{Digiconomist}, as of April 2018 the energy consumed by Bitcoin miners was equivalent to the power usage of almost 5.5 million US households, and all signs indicate that it will continue to grow.
 
-To reduce the power consumption of blockchain, there have been several proposals to turn to other consensus mechanisms that do not rely on ``proofs-of-work''.  The most popular of these proposals is that of proof-of-stake, where parties' contribution to the consensus protocol is proportional to the total amount of stake that they own in the blockchain system.  This allows maintaining the security of blockchain systems without relying on the power-wasting proofs-of-work.  Today's proof-of-stake protocols (e.g.~\cite{FC:BenGabMiz16,eprint:BenPasShi16,CRYPTO:KRDO17,SOSP:GHMVZ17,eprint:FanZho17}) offer many different security and performance guarantees and operate under different security assumptions.  It is not clear at this point which solution will be best suited for massive blockchain deployment.  Other suggestions for avoiding proof-of-work include proof-of-space~\cite{CRYPTO:DFKP15, eprint:PPKAFG15} where miners use storage instead of computation, and proof-of-elapsed-time~\cite{SSS:CXSGLS17} where trusted hardware (i.e., Intel SGX) is used in place of proof-of-work.
+To reduce the power consumption of Blockchain, there have been several proposals to turn to other consensus mechanisms that do not rely on ``proofs-of-work''.  The most popular of these proposals is that of proof-of-stake, where parties' contribution to the consensus protocol is proportional to the total amount of stake that they own in the system.  This allows maintaining the security of blockchain systems without relying on the power-wasting proofs-of-work.  Today's proof-of-stake protocols (e.g.~\cite{FC:BenGabMiz16,eprint:BenPasShi16,CRYPTO:KRDO17,SOSP:GHMVZ17,eprint:FanZho17}) offer many different security and performance guarantees and operate under different security assumptions.  It is not clear at this point which solution will be best suited for massive blockchain deployments.  Other suggestions for avoiding proof-of-work include proof-of-space~\cite{CRYPTO:DFKP15, eprint:PPKAFG15} where miners use storage instead of computation, and proof-of-elapsed-time~\cite{SSS:CXSGLS17} where trusted hardware (i.e., Intel SGX) is used in place of proof-of-work.
 
 Another unintended consequence of proof-of-work style blockchains is the centralization of mining power.  In order to reduce variance in their earnings, miners are incentivized to work together in large mining pools, pooling their compute power and sharing the profits among pool members.  Currently, almost 70\% of Bitcoin blocks are mined by the five largest mining pools \cite{BlockchainInfoPools} significantly limiting the actual decentralization achieved by Bitcoin~\cite{arxiv:GBERS18}. Of course, these pools are disincentivized to damage trust in Bitcoin (and thus reduce its value and their profits) by abusing their power to censor transactions or violate rules in other ways. But this centralization undoubtedly runs counter to the normative property that Blockchain is decentralized and may violate security notions that depend on decentralization. \anote{Add citation on techniques to discourage mining pools.} 
 
 \paragraph{Increasing transaction rates}
-Another challenge to the scalability of blockchain solutions, especially in the permissionless setting is the need to be able to quickly process more and more transactions.  Current systems often have rather long wait times before a transaction can be confirmed on the blockchain (e.g., Bitcoin can take several hours to confirm a transaction\anote{Add citation?}).  This makes blockchain-based solutions less than ideal when immediate transactions are needed, such as when physical goods are sold.
+Another challenge to the scalability of Blockchain solutions, especially in the permissionless setting, is the need to be able to quickly process more and more transactions. Current systems often have rather long wait times before a transaction can be confirmed on the blockchain (e.g., Bitcoin can take several hours to confirm a transaction~\cite{BlockchainInfoTransactionConfTime}).  This makes blockchain-based solutions less than ideal when immediate transactions are needed, such as when physical goods are sold.
 
-A couple different approaches have been proposed to deal with this issue.  First, a number of hybrid consensus algorithms (e.g.,~\cite{SOSP:GHMVZ17,OPODIS:AMNRS17,DISC:PasShi17,EC:PasShi18,NSDI:EGSR16}) aim to reduce transaction approval times through reducing or eliminating forks.  Most of these work by using proof-of style protocols to elect a committee or a single leader who then uses traditional byzantine fault-tolerant consensus to advance the blockchain.  A second approach for improving transaction rates, especially for financial transactions, is to make use of payment-channel networks.  Such networks setup pairwise channels between parties to allow transactions on these channels to occur ``off-chain'', i.e., without being recorded on the blockchain.  The blockchain is only used for conflict resolution.  Thus, transaction rates in payment channels are not bound by the blockchain transaction rate.  Many different flavors of payment-channel networks achieving various properties have been proposed (e.g.~\cite{PooDry16, NDSS:HABSG17,CCS:KhaGer17,SYSTOR:LNEKPS18,CCS:MMKMR17,CCS:GreMie17}) and several such as the Lightning network~\cite{PooDry16} are in active development for financial transactions on top of Bitcoin.  
+A couple of different approaches have been proposed to deal with this issue.  First, a number of hybrid consensus algorithms (e.g.,~\cite{SOSP:GHMVZ17,OPODIS:AMNRS17,DISC:PasShi17,EC:PasShi18,NSDI:EGSR16}) aim to reduce transaction approval times through reducing or eliminating forks. Most of these work by using proof-of style protocols to elect a committee or a single leader who then uses traditional byzantine fault-tolerant consensus to advance the blockchain.  A second approach for improving transaction rates, especially for financial transactions, is to make use of payment-channel networks. Such networks set up pairwise channels between parties to allow transactions on these channels to occur ``off-chain'', i.e., without being recorded on the blockchain. The blockchain is only used for conflict resolution; thus transaction rates in payment channels are not bound by the blockchain transaction rate.  Many different flavors of payment-channel networks achieving various properties have been proposed (e.g.~\cite{PooDry16, NDSS:HABSG17,CCS:KhaGer17,SYSTOR:LNEKPS18,CCS:MMKMR17,CCS:GreMie17}) and several such as the Lightning network~\cite{PooDry16} are in active development for financial transactions on top of Bitcoin.  
 
 \paragraph{Handling increased transaction volume}
-Another scalability challenge for popular blockchain-based systems such as Bitcoin and Ethereum is the sheer volume of transactions that are being added to the blockchain.  As more and more third-party services start to use the blockchain to store and execute their transactions, these blockchain systems have to verify and store all transactions for a variety of unrelated operations.  This can cause the storage and verification work required of miners to become prohibitively expensive as the adoption of blockchain grows.
+Another scalability challenge for popular blockchain-based systems such as Bitcoin and Ethereum is the sheer volume of transactions that are being added to the blockchain.  As more and more third-party services start to use these blockchains to store and execute their transactions, these systems have to verify and store transactions for a variety of unrelated operations. This can cause the storage and verification work required of miners to become prohibitively expensive.
 
-Proposed solutions for this problem include sharding (e.g.~\cite{CCS:LNZBGS16, FC:GenRenSir17}) which allows miners to break transactions into blocks based on the transaction type or service.  This allows using different sets of miners to verify transactions for different services thus reducing the amount of verification work each miner must do.  Another, more radical, approach to deal with this challenge has been to move away from the ``chain'' view of blockchain.  Instead, several proposals (e.g., ~\cite{ePrint:SomLewZoh16,eprint:SomZoh18,IOTA}) propose to organize transactions into a directed-acyclic graph (DAG) where latter transactions can vote on the validity of earlier transactions, thus eliminating the need of verification by miners.
+Proposed solutions for this problem include sharding (e.g.~\cite{CCS:LNZBGS16, FC:GenRenSir17}) which allows miners to break transactions into blocks based on the transaction type or service.  This allows the use of different sets of miners to verify transactions for different services thus reducing the amount of verification work each miner must do.  Another more radical approach to deal with this challenge has been to move away from the ``chain'' view of blockchain.  Instead, several proposals (e.g., ~\cite{ePrint:SomLewZoh16,eprint:SomZoh18,IOTA}) propose to organize transactions into a directed-acyclic graph (DAG) where latter transactions can vote on the validity of earlier transactions, thus eliminating the need for verification by miners.
 %As the Bitcoin user base and transaction volume have grown, limitations on its scalability have been revealed. To some degree, these limitations are a result of Bitcoin's chosen parameters; for example, the 1MB cap on block size has periodically caused prohibitively high transaction fees and wait times. This limitation was mitigated by the Bitcoin Cash hard fork in 2017, which created 8MB blocks, but other scalability problems may not be so easily solvable by simple parameter tweaking, suggesting that they may be inherent limitations of public blockchain technology. We will discuss two limitations that stem from the proof-of-work consensus model that is typically used in public blockchains: emergent centralization of control and high rates of energy consumption.
 %
 %Currently, almost 70\% of Bitcoin blocks are mined by the five largest pools \cite{BlockchainInfoPools}. Of course, these pools are disincentivized to damage trust in Bitcoin (and thus reduce its value and their profits) by abusing their power to censor transactions or violate rules in other ways. But this centralization undoubtedly runs counter to the normative property that Blockchain is decentralized and may violate security notions that depend on decentralization. This problem is caused in part by the hardware-optimized Bitcoin mining puzzle, for which alternatives are being explored, but whether or not this limitation can be overcome at scale is still an open question.
@@ -77,12 +77,12 @@ Proposed solutions for this problem include sharding (e.g.~\cite{CCS:LNZBGS16, F
 
 %\paragraph{Smart contract correctness}
 \subsection{Smart contract correctness and dispute resolution}
-All executable code is subject to bugs: developer errors that can be taken advantage of to hijack program logic. This problem manifests in smart contracts, and when those contracts control the transference of valuable assets, the impact of a bug can be devastating. The immutability of the blockchain exacerbates this challenge by impeding rollback of state changes, even those that are clearly malicious (see Limitations below). This is because by definition, any transactions on a blockchain upon which consensus is reached are considered legal - including buggy code and exploitations of such. If "code is law", as claimed by a blockchain-based investment fund called the Decentralized Autonomous Organization (DAO), then so are bugs. 
+All executable code is subject to bugs: developer errors that can be taken advantage of to hijack program logic. This problem manifests in smart contracts, and when those contracts control the transference of valuable assets, the impact of a bug can be devastating. The immutability of blockchains exacerbates this challenge by impeding rollback of state changes, even those that are clearly malicious. This is because by definition, any transactions on a blockchain upon which consensus is reached are considered legal - including buggy code and exploitations of such. If "code is law", as claimed by a blockchain-based investment fund called the Decentralized Autonomous Organization (DAO), then so are bugs. 
 
 \paragraph{Eliminating bugs in smart contracts}
 This principle of ``code is law'' was put to the test in June 2016 when the DAO was drained of about \$80m in tokens. Targeting a smart contract that first moved funds and then updated account balance, the attacker exploited a vulnerability to recursively execute the contract in between those two steps. Repeatedly moving funds without ever checking account balances allowed the attacker to move more funds than were authorized. In response, the DAO developers implemented a "hard fork" from a state before the attack occurred. This created two blockchains: one in which the funds had never been drained and another in which the attacker still held their spoils \cite{Castillo16}. Of course, this rollback contradicts the perception that the blockchain is immutable and settled contracts are final; we will discuss this contradiction later as a key limitation of Blockchain technology. The challenge is how to ensure smart contract correctness so that code really can be law.
 
-Three different directions have been proposed for improving correctness and security of smart contracts.  These consist of education and development tools to help developers write better smart contracts, development of tools for evaluating correctness and security of existing smart contracts, and finally, formal modeling and formal verification of smart contracts.  Along the education path, researchers organized a class on developing smart contracts cataloging common mistakes and misunderstandings~\cite{FC:DAKMS16}.  Additionally, tools have been developed to simplify development of \emph{private} smart contracts~\cite{SP:KMSWP16}.  Along the tools direction, multiple tools using symbolic execution~\cite{CCS:LCOSH16}, machine learning~\cite{arxiv:Huang18}, and static analysis~\cite{CCS:BDFGGK+16,NDSS:KGDS18} have been developed for detecting bugs and vulnerabilities in smart contracts.  Finally, some of the underlying work necessary to support mainstream development of formally verified smart contracts is underway; for example, the Ethereum Virtual Machine (EVM) has been fully defined for interactive theorem provers \cite{Hirai17}, which are essential tools for building formally verified software of any kind. Magazzeni et. al \cite{Magazzeni17} have laid out a research agenda identifying further groundwork that must be conducted to support formal verification of smart contracts.
+Three different directions have been proposed for improving the correctness and security of smart contracts. These consist of education and development tools to help developers write better smart contracts, development of tools for evaluating correctness and security of existing smart contracts, and finally, formal modeling and formal verification of smart contracts. Along the education path, researchers organized a class on developing smart contracts cataloging common mistakes and misunderstandings~\cite{FC:DAKMS16}. Additionally, tools have been developed to simplify development of \emph{private} smart contracts~\cite{SP:KMSWP16}. For evaluation of existing smart contracts, multiple tools using symbolic execution~\cite{CCS:LCOSH16}, machine learning~\cite{arxiv:Huang18}, and static analysis~\cite{CCS:BDFGGK+16,NDSS:KGDS18} have been developed for detecting bugs and vulnerabilities. Finally, some of the underlying work necessary to support mainstream development of formally verified smart contracts is underway; for example, the Ethereum Virtual Machine (EVM) has been fully defined for interactive theorem provers \cite{Hirai17}, which are essential tools for building formally verified software of any kind. Magazzeni et. al \cite{Magazzeni17} have laid out a research agenda identifying further groundwork that must be conducted to support formal verification of smart contracts.
 
 
 %\noindent
@@ -97,7 +97,7 @@ Three different directions have been proposed for improving correctness and secu
 %\end{enumerate}
 
 \paragraph{Dispute resolution and rollback of mistakes}
-Despite our best efforts to eliminate mistakes in smart contract and transactions, a payment or asset transfer system must be able to reverse fraudulent or mistaken transactions. The immutability property of Blockchain means that transactions cannot be stricken from the ledger after consensus has been reached, so alternative means of dispute resolution must be explored. A new transaction reversing the effects of the disputed transaction could be added to the ledger, but decentralized governance makes arbitrating such a dispute difficult as there is no individual arbiter with the authority to determine which party is in the right when a dispute occurs.  Additionally, dispute resolution must be handled carefully as to not introduce new vulnerabilities.  For example, several attacks were demonstrate on the Bitcoing refund mechanism~\cite{FC:MccShaHao16} prompting further research into security of refund for financial transactions in Bitcoin~\cite{arxiv:AviSafSha18}.
+Despite best efforts to eliminate mistakes in smart contract and transactions, a payment or asset transfer system must be able to reverse fraudulent or mistaken transactions. The immutability property of Blockchain means that transactions cannot be stricken from the ledger after consensus has been reached, so alternative means of dispute resolution must be explored. A new transaction reversing the effects of the disputed transaction could be added to the ledger, but decentralized governance makes arbitrating such a dispute difficult as there is no individual arbiter with the authority to determine which party is in the right when a dispute occurs.  Additionally, dispute resolution must be handled carefully as to not introduce new vulnerabilities.  For example, several attacks were demonstrated against the Bitcoing refund mechanism~\cite{FC:MccShaHao16}, prompting further research into the security of refunds for financial transactions in Bitcoin~\cite{arxiv:AviSafSha18}.
 
 %\noindent
 %\textbf{Academic refs:}
@@ -107,7 +107,7 @@ Despite our best efforts to eliminate mistakes in smart contract and transaction
 %\end{enumerate}
 
 \subsection{Stapling between on-chain transactions and real-world objects}
-Another challenge that arises in many blockchain applications is that of establishing correspondence between on-chain digital tokens and off-chain goods that those tokens represent as well as off-chain information that can serve as input in transactions.  
+Another challenge that arises in many Blockchain applications is that of establishing correspondence between on-chain digital tokens and off-chain goods that those tokens represent as well as off-chain information that can serve as input in transactions.  
 
 \paragraph{Consistency of off-chain assets and corresponding on-chain tokens}
 When a blockchain is used to track off-chain assets (physical or digital), those assets are typically represented on-chain by digital tokens. When dealing with digital assets, correspondence between the asset and its token can generally be maintained by code; for example, a smart contract can track transference of ownership for a digital media license. For physical assets, however, maintaining this consistency is a challenge. Real-world processes must be employed to ensure that whenever an asset's state or ownership is modified, the corresponding token is updated. These processes are an obvious point of failure as they rely on correct enforcement by trusted parties. The person in charge of maintaining the blockchain could attach two tokens to one asset, two assets to one token, or issue tokens that have no backing asset (e.g. stocks in a naked short selling scenario). The end user must also be trusted, as they may be able to separate the token and sell it while keeping the asset, freeing the token to be attached to an invalid asset (e.g., fake goods in luxury markets). 
@@ -126,6 +126,7 @@ Smart contracts sometimes leverage off-chain oracles: online services that provi
 One system tackling this problem is Town Crier \cite{Zhang16}. It uses a trusted hardware back end (Intel SGX) to serve as an authenticated off-chain oracle for Ethereum smart contracts. This allows an auditor to later verify the oracle's response at the time at which the contract was executed. This solution sidesteps the limitation of oracle non-auditability by moving trust to a centralized location (the hardware platform providing authenticity), but it does not diffuse trust in the way our analysis reveals that Blockchain technology is expected to.
 
 \anote{I did not have time to fill in the below two subsections, but I do believe that they should be listed among the fundamental challenges of blockchain}
+\bnote{I will work on surveys for these two areas}
 \subsection{Key Management}
 This isn't really blockchain-specific, but blockchain makes this problems even more important since key recovery is hard/impossible, and losing access to one's key essentially loses all money.  We can probably cite one of many stories of lost Bitcoin here.  Also, probably should cite some of the work on threshold signatures which are used to secret share secret keys to avoid key theft.
 
