--- a/paper/sections/methodology.tex
+++ b/paper/sections/methodology.tex
@@ -1,39 +1,36 @@
 % !TEX root = ../main.tex
 
 \section{Methodology}
-In this work, we wanted to provide a high-level overview of what capabilities are provided by Blockchain technology as well as determine what ,use cases and applications are most suitable for the application of Blockchain technology.
-To accomplish this, we took the standard academic approach of surveying the available literature.
-During this process, it became clear that the majority of work exploring Blockchain technologies capabilities and use cases was found in industry.
-Still, materials produced by industry are sufficiently different from academic literature to make them difficult to use as sources in a traditional literature review.
+In this work, we sought to offer a high-level overview of what capabilities are provided by Blockchain technology as well as determine what use cases and applications are most suitable for it.
+To accomplish this, we took the standard academic approach of surveying the available literature, and during this process, it became clear that the majority of work exploring Blockchain's capabilities and use cases is in industry.
+
+Materials produced by industry are sufficiently different from academic literature to make them difficult to use as sources in a traditional literature review.
 In particular, there are three main concerns when reviewing materials that originated from industry:
 
 \begin{enumerate}
 	\item \textbf{Lack of precise terminology and discussion.}
-	In our review of materials from industry, we found that the same concepts were often described using divergent and imprecise terminology, leading to muddled descriptions of capabilities and use cases for Blockchain technology.
+	In our review of materials from industry, we found that the same concepts were often described using divergent and imprecise terminology, leading to muddled descriptions of capabilities and use cases.
 	Additionally, while there is a fair bit of factually inaccurate information in materials from industry (e.g., several documents claimed cryptographic signatures provide confidentiality), in several cases we clearly observed that the underlying idea being described was accurate but was phrased in such a way as to make it seem incorrect under cursory examination.
 	In this regard, materials from industry represent a trove of useful information obscured by imprecise terminology and discussion.
 	
 	\item \textbf{Inclusion of hype.}
 	Much of the material from industry includes visionary statements (i.e., hype) regarding how Blockchain technology will change technology and the world.
 	This hype is a mixture of realistic applications that can be built on top of Blockchain systems (e.g., anonymous payments~\cite{tbd}) and ideals that far transcend any technical solution (e.g., removing the need for governments).
-	Unfortunately, unlike what one would expect in academic literature, the materials from industry often intermingle hype with the technical technical capabilities and use cases for Blockchain technology.
-	This intermingling of hype with solid technical details at least partially explains why those in academia are quick to dismiss many sources from industry.
+	Unfortunately, unlike what one would expect in academic literature, the materials from industry often intermingle hype with technical details. This at least partially explains why some in academia are quick to dismiss sources from industry.
 	
 	\item \textbf{Researcher bias.}	
 	Researcher bias is an obvious problem in any literature review---regardless of whether the source is academia or industry---and one that is often not explicitly addressed in systemization papers.
-	Still, the potential for bias is even stronger when reviewing the Blockchain materials from industry.
-	Academia's inherent caution when considering work from industry along with the two issues described above (i.e., lack of precise terminology, hype) make it easy to dismiss out of hand materials from industry.
+	The potential for bias is even stronger when reviewing materials from industry as academia's inherent caution when considering work from industry along with the two issues described above (i.e., lack of precise terminology, hype) make it easy to dismiss out of hand materials from industry.
 	Additionally, being aware of the academic pedigree of Blockchain technology can make it easy to overlook the interesting use cases enabled by the composition of existing primitives.
 	
 \end{enumerate}
 
-For all three of these reasons, it is tempting to exclude industry materials from our review of the literature on Blockchain technology.
-Instead of taking this approach, we instead looked for a research methodology that would allow us to address these issues and still mine the underlying information provided by materials from industry.
+For all three of these reasons, it is tempting to exclude industry materials from a review of the literature on Blockchain technology. However, we instead chose to look for a research methodology that would allow us to address these issues and still mine the underlying information provided by materials from industry.
 Ultimately, we settled on using a well established research method originating from sociology---\emph{grounded theory}~\cite{groundedTheory}.
 
-Grounded theory is a methodology used to analyze qualitative data sources (e.g., user stories, interviews) and extract the underly data and processes described across the myriad of gathered sources.\footnote{Grounded theory identifies data and processes that are supported across the body of sources and is not a method for creating a fine-grained breakdown of an individual document.}
+Grounded theory is a methodology used to analyze qualitative data sources (e.g., user stories, interviews) and extract the underlying data and processes described across the myriad of gathered sources.\footnote{Grounded theory identifies data and processes that are supported across the body of sources and is not a method for creating a fine-grained breakdown of an individual document.}
 In particular, grounded theory is designed to help researchers identify data and processes within qualitative data sources generated by humans and filled with imprecise terminology and descriptions.
-Additionally, grounded theory is designed to limit the impact of researcher bias, insuring that the data and processes are derived from the data and not from the researcher's preconceived notions of what the data says.
+Additionally, grounded theory limits the impact of researcher bias, ensuring that the data and processes are derived from the data and not from the researcher's preconceived notions of what the data says.
 Grounded theory explicitly addresses the first and third problems we identified for evaluating materials from industry, and our hope was that it would also be able to separate the hype from the underlying data and processing; a hope which we believe was satisfied based on our results.
 
 In the remainder of this section we first describe how we gathered industry materials for our grounded theory analysis.
