--- a/paper/setup/macros.tex
+++ b/paper/setup/macros.tex
@@ -72,3 +72,4 @@
 %-----------------------Notes------------------------------------%
 \usepackage{todonotes}
 \newcommand{\anote}[1]{\todo[inline]{Arkady:  #1}}
+\newcommand{\bnote}[1]{\todo[inline]{Ben:  #1}}
